@@ -1,73 +1,82 @@
 package org.georchestra.pluievolution.api.config;
 
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
-import javax.servlet.Filter;
-
+import org.apache.commons.lang3.ArrayUtils;
 import org.georchestra.pluievolution.api.security.PreAuthenticationFilter;
-import org.georchestra.pluievolution.api.security.PreAuthenticationProvider;
-import org.georchestra.pluievolution.service.sm.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.core.GrantedAuthorityDefaults;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-@EnableWebSecurity
-public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
+import jakarta.servlet.Filter;
 
-	@Override
-	protected void configure(HttpSecurity http) throws Exception {
-		http.cors().and().authorizeRequests().antMatchers("/", "/*.js", "/*.css", "/*.ico").permitAll()
-				// On autorise l'accès aux json de conf pour l'authent
-				.antMatchers("/assets/{\\p}/*.json").permitAll()
-				// On autorise l'accès aux images pour l'authent
-				.antMatchers("/assets/{\\p}/*.jpeg").permitAll().antMatchers("/assets/{\\p}/{\\p}/*.svg").permitAll()
-				// On autorise certains WS utilisés pour l'authent
-				.antMatchers("/plui-evolution/**").permitAll()
-				// -- swagger ui
-				.antMatchers("/csrf", "/plui-evolution/swagger-resources/**", "/plui-evolution/swagger-ui.html", "/webjars/**", "/v2/api-docs/**",
-						"/configuration/ui", "/configuration/security")
-				.permitAll().antMatchers("/administration/**").fullyAuthenticated().and().httpBasic().and()
-				.addFilterAfter(createPreAuthenticationFilter(), BasicAuthenticationFilter.class).sessionManagement()
-				.sessionCreationPolicy(SessionCreationPolicy.STATELESS).and().csrf().disable();
+@Configuration
+@EnableWebSecurity
+@EnableMethodSecurity
+public class WebSecurityConfig {
+
+	private static final String[] SB_PERMIT_ALL_URL = { BasicSecurityConstants.SWAGGER_RESSOURCE_URL,
+			BasicSecurityConstants.SWAGGER_RESSOURCE_UI, BasicSecurityConstants.SWAGGER_RESSOURCE_INDEX,
+			BasicSecurityConstants.WEBJARS_URL, BasicSecurityConstants.API_DOCS_URL,
+			BasicSecurityConstants.CONFIGURATION_SECURITY_URL, BasicSecurityConstants.CONFIGURATION_UI_URL,
+			BasicSecurityConstants.ASSETS_URL, BasicSecurityConstants.ICONES_URL, BasicSecurityConstants.CSS_URL,
+			BasicSecurityConstants.SLASH_URL, BasicSecurityConstants.JS_URL, BasicSecurityConstants.CRSF_URL };
+
+	@Value("${security.authentication.disabled:false}")
+	private boolean disableAuthentification = false;
+
+	@Bean
+	public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+		if (!disableAuthentification) {
+			http.cors(Customizer.withDefaults()).csrf(csrf -> csrf.disable())
+					.authorizeHttpRequests(authorizeHttpRequests -> authorizeHttpRequests
+							.requestMatchers(SB_PERMIT_ALL_URL).permitAll().anyRequest().fullyAuthenticated())
+					.exceptionHandling(Customizer.withDefaults())
+					.sessionManagement(sessionManagement -> sessionManagement
+							.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+					.addFilterAfter(createPreAuthenticationFilter(), BasicAuthenticationFilter.class);
+		} else {
+			http.cors(Customizer.withDefaults()).csrf(csrf -> csrf.disable())
+					.authorizeHttpRequests(authorizeHttpRequests -> authorizeHttpRequests.anyRequest().permitAll());
+		}
+		return http.build();
 	}
 
 	@Bean
-	CorsConfigurationSource corsConfigurationSource() {
-		CorsConfiguration configuration = new CorsConfiguration();
+	protected CorsConfigurationSource corsConfigurationSource() {
+		final CorsConfiguration configuration = new CorsConfiguration();
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS", "PUT", "DELETE"));
 		configuration.addAllowedHeader("*");
 		configuration.setAllowCredentials(true);
 
 		// Url autorisées
 		// 4200 pour les développement | 8080 pour le déploiement
-		configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
+		configuration.setAllowedOriginPatterns(List.of("*"));
 
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
 	}
 
-	@Override
-	protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-		auth.inMemoryAuthentication().withUser("admin").password("{noop}4dM1nApp!").roles("ADMIN");
-		auth.authenticationProvider(createPreAuthenticationProvider());
+	@Bean
+	protected GrantedAuthorityDefaults grantedAuthorityDefaults() {
+		// Remove the ROLE_ prefix
+		return new GrantedAuthorityDefaults("");
 	}
 
-	private AuthenticationProvider createPreAuthenticationProvider() {
-		return new PreAuthenticationProvider();
-	}
-
-	private Filter createPreAuthenticationFilter() {
-		return new PreAuthenticationFilter();
+	protected Filter createPreAuthenticationFilter() {
+		return new PreAuthenticationFilter(ArrayUtils.addAll(SB_PERMIT_ALL_URL));
 	}
 }
